Replace Base64 libraries for a new one, implemented in the SDK